# sonic-adventure-2-extractor

./: .gitignore  CMakeLists.txt  README.md  build.ps1
docs/: FORMATS.md
src/app/: main.cpp
src/cli/: main.cpp
src/core/: sa2_audio.cpp  sa2_chao.cpp  sa2_exe.cpp  sa2_fbx.cpp  sa2_formats.cpp  sa2_index.cpp  sa2_model.cpp  sa2_names.cpp  sa2_stage.cpp  sa2_unity.cpp  sa2core.h
tools/: adx.py  anim_pose.py  basechunk.py  basemode.py  build.py  build_correct.py  census.py  census_chunks.py  chaobuild.py  chaobuild2.py  chaobuild8.py  chaomap.py  chaoprobe.py  chaorel.py  chaosurvey.py  chunk.py  chunkdump.py  diag.py  diag_body.py  diag_centroid.py  diag_polystruct.py  dumpprs.py  eventmodel.py  evtexplore.py  exemodel.py  exetex.py  findbase.py  gcmodel.py  gcprobe.py  gvranalyze.py  hexdump.py  ltbuild.py  ltdiag.py  mdlmtn.py  nodedump.py  objmap.py  objtrace.py  objwalk.py  pe.py  pinbase.py  (+20 more)
